--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -200,7 +200,9 @@ if (${Poco_FOUND} AND ${spdlog_FOUND})
             src/Server/bunfet-example.hpp
             src/Email/SendEmailController.hpp
             src/FileSystem/ReadFromFile.cpp
-            src/FileSystem/ReadFromFile.hpp)
+            src/FileSystem/ReadFromFile.hpp
+            src/String/split.hpp
+            src/String/split.cpp)
     target_compile_definitions(
             webservers PUBLIC -DCURRENT_SOURCE_DIR="${CMAKE_CURRENT_SOURCE_DIR}")
     target_compile_options(webservers PUBLIC -Wall -Wextra -Werror -Wpedantic
