--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -209,7 +209,9 @@ if (${Poco_FOUND} AND ${spdlog_FOUND})
             src/Server/SimpleController.cpp
             src/Server/SimpleController.hpp
             src/String/capitalize.hpp
-            src/String/capitalize.cpp)
+            src/String/capitalize.cpp
+            src/Server/SimpleController2.cpp
+            src/Server/SimpleController2.hpp)
     target_compile_definitions(
             webservers PUBLIC -DCURRENT_SOURCE_DIR="${CMAKE_CURRENT_SOURCE_DIR}")
     target_compile_options(webservers PUBLIC -Wall -Wextra -Werror -Wpedantic
