--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -217,7 +217,10 @@ if (${Poco_FOUND} AND ${spdlog_FOUND})
             src/Server/CrudController.cpp
             src/Data/MigrationsV4.cpp
             src/Data/MigrationsV4.hpp
-            src/Login/LoginController.cpp)
+            src/Login/LoginController.cpp
+            src/Http/handler_type.hpp
+            src/Http/RouteId.cpp
+            src/Http/RouteId.hpp)
     target_compile_definitions(
             webservers PUBLIC -DCURRENT_SOURCE_DIR="${CMAKE_CURRENT_SOURCE_DIR}")
     target_compile_options(webservers PUBLIC -Wall -Wextra -Werror -Wpedantic
