--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,6 +13,7 @@ endif ()
 
 set(CMAKE_PREFIX_PATH ${CMAKE_CURRENT_BINARY_DIR}/lib/cmake)
 
+include(FeatureSummary)
 include(GNUInstallDirs)
 set(TODO_DATABASE_DIR ${CMAKE_INSTALL_FULL_LOCALSTATEDIR}/todo)
 add_definitions(-DTODO_DATABASE_DIR="${TODO_DATABASE_DIR}")
@@ -379,3 +380,26 @@ if (NOT ${spdlog_FOUND})
             INSTALL_DIR ${CMAKE_CURRENT_BINARY_DIR}
             CMAKE_ARGS -DCMAKE_INSTALL_PREFIX=${CMAKE_CURRENT_BINARY_DIR})
 endif ()
+
+message(STATUS "Build Type: ${CMAKE_BUILD_TYPE}")
+message(STATUS "Install Prefix: ${CMAKE_INSTALL_PREFIX}")
+
+message(STATUS "BINDIR: ${CMAKE_INSTALL_FULL_BINDIR}")
+message(STATUS "SBINDIR: ${CMAKE_INSTALL_FULL_SBINDIR}")
+message(STATUS "LIBEXECDIR: ${CMAKE_INSTALL_FULL_LIBEXECDIR}")
+message(STATUS "SYSCONFDIR: ${CMAKE_INSTALL_FULL_SYSCONFDIR}")
+message(STATUS "SHAREDSTATEDIR: ${CMAKE_INSTALL_FULL_SHAREDSTATEDIR}")
+message(STATUS "LOCALSTATEDIR: ${CMAKE_INSTALL_FULL_LOCALSTATEDIR}")
+message(STATUS "RUNSTATEDIR: ${CMAKE_INSTALL_FULL_RUNSTATEDIR}")
+message(STATUS "LIBDIR: ${CMAKE_INSTALL_FULL_LIBDIR}")
+message(STATUS "INCLUDEDIR: ${CMAKE_INSTALL_FULL_INCLUDEDIR}")
+message(STATUS "OLDINCLUDEDIR: ${CMAKE_INSTALL_FULL_OLDINCLUDEDIR}")
+message(STATUS "DATAROOTDIR: ${CMAKE_INSTALL_FULL_DATAROOTDIR}")
+message(STATUS "DATADIR: ${CMAKE_INSTALL_FULL_DATADIR}")
+message(STATUS "INFODIR: ${CMAKE_INSTALL_FULL_INFODIR}")
+message(STATUS "LOCALEDIR: ${CMAKE_INSTALL_FULL_LOCALEDIR}")
+message(STATUS "MANDIR: ${CMAKE_INSTALL_FULL_MANDIR}")
+message(STATUS "DOCDIR: ${CMAKE_INSTALL_FULL_DOCDIR}")
+
+
+feature_summary(WHAT ALL)
